@@ -1,6 +1,7 @@
 2.1 (dev)
 ---------
 * Bug fixing
+* add centroid/lat/lng info to datamart/locations/
 * add extra filter to datamart/t2f/trips/
 * add 'vendor_number' to datamart/audit/engagements
 * add 'reference_number' to datamart/audit/engagements
